--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <Button Content="Click Me" Click="Button_Click" />
     </Grid>
 </Page>
