--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -5,10 +5,50 @@
     xmlns:local="using:AlbumCoverMatchGame"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="Page_Loaded"
+    xmlns:data="using:AlbumCoverMatchGame.Models"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <Button Content="Click Me" Click="Button_Click" />
+    <Grid Loaded="Grid_Loaded">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100" />
+            <RowDefinition Height="*" /> 
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0">
+            <ProgressBar x:Name="myProgressBar" Maximum="100" Minimum="0" Value="100" Height="20" Foreground="Blue" Margin="20,20,20,20"/>
+            <TextBlock x:Name="InstructionTextBlock" Text="" Foreground="Blue" HorizontalAlignment="Center"/>
+            <MediaElement x:Name="MyMediaOutlet" AutoPlay="True"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Orientation="Vertical">
+            <GridView x:Name="SongGridView" ItemsSource="{x:Bind Songs}" IsItemClickEnabled="True" ItemClick="SongGridView_ItemClick">
+                <GridView.ItemTemplate>
+                    <DataTemplate x:DataType="data:Song">
+                        <Grid>
+                            <Image x:Name="AlbumArtImage" Height="75" Width="75" Source="{x:Bind AlbumCover}"/>
+                        </Grid>
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+                
+            </GridView>
+
+            <TextBlock x:Name="ResultTextBlock" />
+            <TextBlock x:Name="TitleTextBlock" />
+            <TextBlock x:Name="ArtistTextBlock" />
+            <TextBlock x:Name="AlbumTextBlock" />
+            <Button x:Name="PlayAgainButton"  Content="Play Again" Background="Red" HorizontalAlignment="Center" Visibility="Collapsed" Click="PlayAgainButton_Click"/>
+        </StackPanel>
+
+
+        <Grid Grid.Row="1">
+            <ProgressRing x:Name="StartupProgressRing" HorizontalAlignment="Center" 
+                          VerticalAlignment="Center" 
+                          Width="100" 
+                          Height="100"
+                          Foreground="Gray"/>
+        </Grid>
+        
     </Grid>
 </Page>
