--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -10,6 +10,26 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+        <Storyboard x:Name="CountDown" Completed="CountDown_Completed">
+            <DoubleAnimationUsingKeyFrames EnableDependentAnimation="True" 
+                                           Storyboard.TargetName="MyProgressBar" 
+                                           Storyboard.TargetProperty="(RangeBase.Value)">
+                <DiscreteDoubleKeyFrame KeyTime="0" Value="100" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:1" Value="100" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:2" Value="90" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:3" Value="80" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:4" Value="70" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:5" Value="60" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:6" Value="50" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:7" Value="40" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:8" Value="30" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:9" Value="20" />
+                <DiscreteDoubleKeyFrame KeyTime="0:0:10" Value="10" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Page.Resources>
+
     <Grid Loaded="Grid_Loaded">
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
@@ -17,9 +37,9 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0">
-            <ProgressBar x:Name="myProgressBar" Maximum="100" Minimum="0" Value="100" Height="20" Foreground="Blue" Margin="20,20,20,20"/>
+            <ProgressBar x:Name="MyProgressBar" Maximum="100" Minimum="0" Value="100" Height="20" Foreground="Blue" Margin="20,20,20,20"/>
             <TextBlock x:Name="InstructionTextBlock" Text="" Foreground="Blue" HorizontalAlignment="Center"/>
-            <MediaElement x:Name="MyMediaOutlet" AutoPlay="True"/>
+            <MediaElement x:Name="MyMediaElement" AutoPlay="True"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Vertical" Margin="20">
